--- a/css/style.css
+++ b/css/style.css
@@ -498,10 +498,9 @@ p {
 
 /* footer icon */
 
-.footer-container{
-   display:flex;
-  margin-left: 156px;
-
+.footer-container {
+  display: flex;
+  align-items: baseline;
 }
 
 .footer-title-social {
@@ -514,8 +513,10 @@ p {
   color: var(--pramery-white-color);
   text-align: center;
   margin-bottom: 20px;
- 
+}
 
+.social-wrap {
+  margin-left: 70px;
 }
 
 .footer-social {
@@ -604,6 +605,12 @@ p {
 
 .card .item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
+}
+
+.portf-list:hover,
+.portf-list:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .card .img-project {
