--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ p {
 
 /* Hero */
 .hero {
-  width: 1600px;
+  max-width: 1600px;
   height: 600px;
   background-image: linear-gradient(
       to right,
